generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id           String    @id @default(cuid())
  googleId     String    @unique
  email        String    @unique
  name         String
  image        String?
  accessToken  String?
  refreshToken String?
  tokenExpiry  DateTime?
  createdAt    DateTime  @default(now())
  isSuperAdmin Boolean   @default(false)

  systemPrompts SystemPrompt[]
  contextParts  ContextPart[]
  sellingPoints SellingPoint[]
  emailDrafts   EmailDraft[]
  signatures    Signature[]
  pipelineRuns  PipelineRun[]
  stepsRun      PipelineStep[]   @relation("StepRunner")
  roles         UserRole[]
  permOverrides UserPermission[]
  budget        UserBudget?
  groups        UserGroup[]
  projects      UserProject[]

  globalRecords      GlobalRecord[]
  inputSources       InputSource[]
  addedRefs          PipelineRecordRef[]
  recordEvents       RecordEvent[]
  partnerAssignments PartnerAssignment[]
  partnerMailEvents  PartnerMailEvent[]
  partnerNotes       PartnerNote[]
  usageEvents        UsageEvent[]
}

model Role {
  id          String     @id @default(cuid())
  name        String
  description String?
  color       String     @default("#6366f1")
  permissions String[]
  isSystem    Boolean    @default(false)
  users       UserRole[]
  createdAt   DateTime   @default(now())
}

model UserRole {
  userId     String
  roleId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  role       Role     @relation(fields: [roleId], references: [id], onDelete: Cascade)
  assignedAt DateTime @default(now())

  @@id([userId, roleId])
}

model UserPermission {
  id      String  @id @default(cuid())
  userId  String
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  key     String
  granted Boolean

  @@unique([userId, key])
}

model Group {
  id        String   @id @default(cuid())
  name      String   @unique
  slug      String   @unique
  color     String   @default("#6366f1")
  createdAt DateTime @default(now())

  members             UserGroup[]
  projects            Project[]
  systemPrompts       SystemPrompt[]
  contextParts        ContextPart[]
  sellingPoints       SellingPoint[]
  emailDrafts         EmailDraft[]
  partnerNotes        PartnerNote[]
  partnerFulfillments PartnerFulfillment[]
}

model Project {
  id        String   @id @default(cuid())
  name      String
  slug      String   @unique
  groupId   String
  group     Group    @relation(fields: [groupId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())

  members       UserProject[]
  systemPrompts SystemPrompt[]
  contextParts  ContextPart[]
  sellingPoints SellingPoint[]
  emailDrafts   EmailDraft[]
  pipelineRuns  PipelineRun[]

  @@unique([groupId, name])
  @@index([groupId])
}

model UserGroup {
  userId   String
  groupId  String
  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  group    Group    @relation(fields: [groupId], references: [id], onDelete: Cascade)
  joinedAt DateTime @default(now())

  @@id([userId, groupId])
}

model UserProject {
  userId     String
  projectId  String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  project    Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  assignedAt DateTime @default(now())

  @@id([userId, projectId])
  @@index([projectId])
}

enum BudgetResetPeriod {
  never
  daily
  weekly
  monthly
}

model UserBudget {
  userId        String            @id
  user          User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  limitUsd      Float?
  usedUsd       Float             @default(0)
  resetPeriod   BudgetResetPeriod @default(never)
  periodStartAt DateTime? // start of the current billing window
}

model Signature {
  id        String   @id @default(cuid())
  name      String
  content   String
  isDefault Boolean  @default(false)
  isSystem  Boolean  @default(false)
  author    User     @relation(fields: [authorId], references: [id])
  authorId  String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum StepType {
  MARKET_SCANNING
  PARTNER_IDENTIFICATION
  PARTNER_PROFILING

  VALUE_ALIGNMENT
  OUTREACH_PREPARATION
  OUTREACH_EXECUTION
}

enum StepStatus {
  PENDING
  RUNNING
  COMPLETED
  FAILED
}

model SystemPrompt {
  id            String         @id @default(cuid())
  name          String
  content       String
  stepType      StepType
  isSystem      Boolean        @default(false)
  authorId      String
  author        User           @relation(fields: [authorId], references: [id])
  groupId       String?
  group         Group?         @relation(fields: [groupId], references: [id], onDelete: Restrict)
  projectId     String?
  project       Project?       @relation(fields: [projectId], references: [id], onDelete: Restrict)
  createdAt     DateTime       @default(now())
  derivedFromId String?
  derivedFrom   SystemPrompt?  @relation("PromptLineage", fields: [derivedFromId], references: [id])
  derived       SystemPrompt[] @relation("PromptLineage")
  steps         PipelineStep[]
}

model ContextPart {
  id            String        @id @default(cuid())
  name          String
  content       String
  stepKeys      String[]      @default([])
  authorId      String
  author        User          @relation(fields: [authorId], references: [id])
  groupId       String?
  group         Group?        @relation(fields: [groupId], references: [id], onDelete: Restrict)
  projectId     String?
  project       Project?      @relation(fields: [projectId], references: [id], onDelete: Restrict)
  createdAt     DateTime      @default(now())
  derivedFromId String?
  derivedFrom   ContextPart?  @relation("ContextLineage", fields: [derivedFromId], references: [id])
  derived       ContextPart[] @relation("ContextLineage")
}

model SellingPoint {
  id            String         @id @default(cuid())
  name          String
  content       String
  authorId      String
  author        User           @relation(fields: [authorId], references: [id])
  groupId       String?
  group         Group?         @relation(fields: [groupId], references: [id], onDelete: Restrict)
  projectId     String?
  project       Project?       @relation(fields: [projectId], references: [id], onDelete: Restrict)
  createdAt     DateTime       @default(now())
  derivedFromId String?
  derivedFrom   SellingPoint?  @relation("SellingLineage", fields: [derivedFromId], references: [id])
  derived       SellingPoint[] @relation("SellingLineage")
  steps         PipelineStep[]
}

model EmailDraft {
  id            String         @id @default(cuid())
  name          String
  subject       String
  body          String
  authorId      String
  author        User           @relation(fields: [authorId], references: [id])
  groupId       String?
  group         Group?         @relation(fields: [groupId], references: [id], onDelete: Restrict)
  projectId     String?
  project       Project?       @relation(fields: [projectId], references: [id], onDelete: Restrict)
  createdAt     DateTime       @default(now())
  derivedFromId String?
  derivedFrom   EmailDraft?    @relation("DraftLineage", fields: [derivedFromId], references: [id])
  derived       EmailDraft[]   @relation("DraftLineage")
  steps         PipelineStep[]
}

model PipelineRun {
  id           String              @id @default(cuid())
  name         String
  authorId     String
  author       User                @relation(fields: [authorId], references: [id])
  projectId    String
  project      Project             @relation(fields: [projectId], references: [id])
  createdAt    DateTime            @default(now())
  steps        PipelineStep[]
  inputSources InputSource[]
  recordRefs   PipelineRecordRef[]

  @@index([projectId])
}

model PipelineStep {
  id                String              @id @default(cuid())
  pipelineRunId     String
  pipelineRun       PipelineRun         @relation(fields: [pipelineRunId], references: [id], onDelete: Cascade)
  stepType          StepType
  status            StepStatus          @default(PENDING)
  systemPromptId    String?
  systemPrompt      SystemPrompt?       @relation(fields: [systemPromptId], references: [id])
  contextPartIds    String[]
  sellingPointId    String?
  sellingPoint      SellingPoint?       @relation(fields: [sellingPointId], references: [id])
  emailDraftId      String?
  emailDraft        EmailDraft?         @relation(fields: [emailDraftId], references: [id])
  inputData         Json?
  outputData        Json?
  errorMessage      String?
  runnerId          String
  runner            User                @relation("StepRunner", fields: [runnerId], references: [id])
  createdAt         DateTime            @default(now())
  completedAt       DateTime?
  candidatePartners CandidatePartner[]
  inputSources      InputSource[]
  recordRefs        PipelineRecordRef[]
  usageEvents       UsageEvent[]
}

model Partner {
  id             String   @id @default(cuid())
  name           String
  website        String?
  description    String?
  type           String?
  rawData        Json?
  createdAt      DateTime @default(now())
  globalRecordId String?

  candidateRelations CandidatePartner[]
}

model CandidatePartner {
  id                  String       @id @default(cuid())
  itemName            String
  itemUrl             String?
  partnerId           String
  partner             Partner      @relation(fields: [partnerId], references: [id])
  pipelineStepId      String
  step                PipelineStep @relation(fields: [pipelineStepId], references: [id])
  createdAt           DateTime     @default(now())
  pipelineRecordRefId String?
}

// ── Global Record System ─────────────────────────────────────────────────────

enum RecordType {
  COMPETITION
  PARTNER
  ORGANISATION
  CHANNEL
  SOURCE
  OPPORTUNITY
}

enum AddMethod {
  GENERATED
  IMPORTED
  MANUAL
  GLOBAL_DB
  INHERITED
}

enum InputSourceType {
  MINI_DEEP_RESEARCH
  AI_IMPORT
  MANUAL_ADD
  GLOBAL_DB_SELECT
}

model GlobalRecord {
  id             String         @id @default(cuid())
  type           RecordType
  canonicalName  String
  normalizedName String
  payload        Json
  sourceMetadata Json?
  createdBy      String
  creator        User           @relation(fields: [createdBy], references: [id])
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt
  duplicateOfId  String?
  duplicateOf    GlobalRecord?  @relation("Duplicates", fields: [duplicateOfId], references: [id])
  duplicates     GlobalRecord[] @relation("Duplicates")

  pipelineRefs PipelineRecordRef[]
  events       RecordEvent[]
  contacts     PartnerContact[]
  assignments  PartnerAssignment[]
  mailEvents   PartnerMailEvent[]
  partnerNotes PartnerNote[]
  fulfillments PartnerFulfillment[]

  @@unique([normalizedName, type])
}

// ── Usage tracking ────────────────────────────────────────────────────────────

enum UsageEventType {
  ai_completion
  serp_search
}

model UsageEvent {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())

  eventType    UsageEventType
  model        String? // e.g. "anthropic/claude-sonnet-4.6" or "serpapi"
  costUsd      Float          @default(0)
  generationId String? // OpenRouter generation ID for AI calls

  pipelineStepId String?
  step           PipelineStep? @relation(fields: [pipelineStepId], references: [id], onDelete: SetNull)
  stepType       String? // e.g. "MARKET_SCANNING"

  @@index([userId, createdAt])
  @@index([userId, eventType])
}

// ── System-wide configuration ─────────────────────────────────────────────────

model SystemConfig {
  key       String   @id // e.g. "budget.defaultLimitUsd"
  value     Json // arbitrary JSON value
  updatedAt DateTime @updatedAt
  updatedBy String?
}

model InputSource {
  id            String          @id @default(cuid())
  type          InputSourceType
  pipelineRunId String
  pipelineRun   PipelineRun     @relation(fields: [pipelineRunId], references: [id], onDelete: Cascade)
  stepId        String?
  step          PipelineStep?   @relation(fields: [stepId], references: [id])
  label         String
  createdBy     String
  creator       User            @relation(fields: [createdBy], references: [id])
  createdAt     DateTime        @default(now())
  metadata      Json?

  recordRefs PipelineRecordRef[]
}

model PipelineRecordRef {
  id                      String       @id @default(cuid())
  pipelineRunId           String
  pipelineRun             PipelineRun  @relation(fields: [pipelineRunId], references: [id], onDelete: Cascade)
  stepId                  String
  step                    PipelineStep @relation(fields: [stepId], references: [id], onDelete: Cascade)
  globalRecordId          String
  globalRecord            GlobalRecord @relation(fields: [globalRecordId], references: [id])
  inputSourceId           String?
  inputSource             InputSource? @relation(fields: [inputSourceId], references: [id])
  addedBy                 String
  adder                   User         @relation(fields: [addedBy], references: [id])
  addedAt                 DateTime     @default(now())
  isSelectedForProcessing Boolean      @default(true)
  addMethod               AddMethod
  localNote               String?

  @@unique([pipelineRunId, stepId, globalRecordId])
  @@index([stepId, isSelectedForProcessing])
}

enum RecordEventType {
  CREATED
  DEDUP_LINKED
  DEDUP_REVIEW
  STATUS_CHANGED
  RELEVANCE_SET
  DELETED
  MERGED
  MIGRATED
}

model RecordEvent {
  id             String          @id @default(cuid())
  globalRecordId String
  globalRecord   GlobalRecord    @relation(fields: [globalRecordId], references: [id])
  pipelineRunId  String?
  stepId         String?
  userId         String
  user           User            @relation(fields: [userId], references: [id])
  eventType      RecordEventType
  timestamp      DateTime        @default(now())
  metadata       Json?
}

// ── Partner CRM System ────────────────────────────────────────────────────────

enum MailDirection {
  SENT
  RECEIVED
}

model PartnerContact {
  id             String       @id @default(cuid())
  globalRecordId String
  globalRecord   GlobalRecord @relation(fields: [globalRecordId], references: [id], onDelete: Cascade)
  address        String
  label          String?
  isPrimary      Boolean      @default(false)
  createdAt      DateTime     @default(now())

  @@index([globalRecordId])
}

model PartnerAssignment {
  globalRecordId String
  userId         String
  globalRecord   GlobalRecord @relation(fields: [globalRecordId], references: [id], onDelete: Cascade)
  user           User         @relation(fields: [userId], references: [id])
  assignedAt     DateTime     @default(now())

  @@id([globalRecordId, userId])
}

model PartnerMailEvent {
  id             String        @id @default(cuid())
  globalRecordId String
  globalRecord   GlobalRecord  @relation(fields: [globalRecordId], references: [id], onDelete: Cascade)
  direction      MailDirection
  subject        String
  body           String?
  sentAt         DateTime
  fromAddress    String?
  toAddress      String?
  gmailId        String?
  createdBy      String
  creator        User          @relation(fields: [createdBy], references: [id])
  createdAt      DateTime      @default(now())

  @@index([globalRecordId, sentAt])
}

model PartnerNote {
  id             String       @id @default(cuid())
  globalRecordId String
  globalRecord   GlobalRecord @relation(fields: [globalRecordId], references: [id], onDelete: Cascade)
  content        String
  authorId       String
  author         User         @relation(fields: [authorId], references: [id])
  groupId        String?
  group          Group?       @relation(fields: [groupId], references: [id])
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt

  @@index([globalRecordId])
}

model PartnerFulfillment {
  id             String       @id @default(cuid())
  globalRecordId String
  globalRecord   GlobalRecord @relation(fields: [globalRecordId], references: [id], onDelete: Cascade)
  groupId        String?
  group          Group?       @relation(fields: [groupId], references: [id])
  myToThem       String?
  themToUs       String?
  updatedAt      DateTime     @updatedAt

  @@unique([globalRecordId, groupId])
}
