erDiagram
    User {
        string id PK
        string googleId UK
        string email UK
        string name
        string image "nullable"
        string accessToken "nullable"
        string refreshToken "nullable"
        datetime tokenExpiry "nullable"
        datetime createdAt
        boolean isSuperAdmin
    }
    Role {
        string id PK
        string name
        string description "nullable"
        string color
        string permissions
        boolean isSystem
        datetime createdAt
    }
    UserRole {
        string userId
        string roleId
        datetime assignedAt
    }
    UserPermission {
        string id PK
        string userId
        string key
        boolean granted
    }
    Group {
        string id PK
        string name UK
        string slug UK
        string color
        datetime createdAt
    }
    Project {
        string id PK
        string name
        string slug UK
        string groupId
        datetime createdAt
    }
    UserGroup {
        string userId
        string groupId
        datetime joinedAt
    }
    UserProject {
        string userId
        string projectId
        datetime assignedAt
    }
    UserBudget {
        string userId PK
        float limitUsd "nullable"
        float usedUsd
        BudgetResetPeriod resetPeriod
        datetime periodStartAt "nullable"
    }
    Signature {
        string id PK
        string name
        string content
        boolean isDefault
        boolean isSystem
        string authorId
        datetime createdAt
        datetime updatedAt
    }
    SystemPrompt {
        string id PK
        string name
        string content
        StepType stepType
        boolean isSystem
        string authorId
        string groupId "nullable"
        string projectId "nullable"
        datetime createdAt
        string derivedFromId "nullable"
    }
    ContextPart {
        string id PK
        string name
        string content
        string stepKeys
        string authorId
        string groupId "nullable"
        string projectId "nullable"
        datetime createdAt
        string derivedFromId "nullable"
    }
    SellingPoint {
        string id PK
        string name
        string content
        string authorId
        string groupId "nullable"
        string projectId "nullable"
        datetime createdAt
        string derivedFromId "nullable"
    }
    EmailDraft {
        string id PK
        string name
        string subject
        string body
        string authorId
        string groupId "nullable"
        string projectId "nullable"
        datetime createdAt
        string derivedFromId "nullable"
    }
    PipelineRun {
        string id PK
        string name
        string authorId
        string projectId
        datetime createdAt
    }
    PipelineStep {
        string id PK
        string pipelineRunId
        StepType stepType
        StepStatus status
        string systemPromptId "nullable"
        string contextPartIds
        string sellingPointId "nullable"
        string emailDraftId "nullable"
        json inputData "nullable"
        json outputData "nullable"
        string errorMessage "nullable"
        string runnerId
        datetime createdAt
        datetime completedAt "nullable"
    }
    Partner {
        string id PK
        string name
        string website "nullable"
        string description "nullable"
        string type "nullable"
        json rawData "nullable"
        datetime createdAt
        string globalRecordId "nullable"
    }
    CandidatePartner {
        string id PK
        string itemName
        string itemUrl "nullable"
        string partnerId
        string pipelineStepId
        datetime createdAt
        string pipelineRecordRefId "nullable"
    }
    GlobalRecord {
        string id PK
        RecordType type
        string canonicalName
        string normalizedName
        json payload
        json sourceMetadata "nullable"
        string createdBy
        datetime createdAt
        datetime updatedAt
        string duplicateOfId "nullable"
    }
    UsageEvent {
        string id PK
        string userId
        datetime createdAt
        UsageEventType eventType
        string model "nullable"
        float costUsd
        string generationId "nullable"
        string pipelineStepId "nullable"
        string stepType "nullable"
    }
    SystemConfig {
        string key PK
        json value
        datetime updatedAt
        string updatedBy "nullable"
    }
    InputSource {
        string id PK
        InputSourceType type
        string pipelineRunId
        string stepId "nullable"
        string label
        string createdBy
        datetime createdAt
        json metadata "nullable"
    }
    PipelineRecordRef {
        string id PK
        string pipelineRunId
        string stepId
        string globalRecordId
        string inputSourceId "nullable"
        string addedBy
        datetime addedAt
        boolean isSelectedForProcessing
        AddMethod addMethod
        string localNote "nullable"
    }
    RecordEvent {
        string id PK
        string globalRecordId
        string pipelineRunId "nullable"
        string stepId "nullable"
        string userId
        string eventType
        datetime timestamp
        json metadata "nullable"
    }
    PartnerContact {
        string id PK
        string globalRecordId
        string address
        string label "nullable"
        boolean isPrimary
        datetime createdAt
    }
    PartnerAssignment {
        string globalRecordId
        string userId
        datetime assignedAt
    }
    PartnerMailEvent {
        string id PK
        string globalRecordId
        MailDirection direction
        string subject
        string body "nullable"
        datetime sentAt
        string fromAddress "nullable"
        string toAddress "nullable"
        string gmailId "nullable"
        string createdBy
        datetime createdAt
    }
    PartnerNote {
        string id PK
        string globalRecordId
        string content
        string authorId
        string groupId "nullable"
        datetime createdAt
        datetime updatedAt
    }
    PartnerFulfillment {
        string id PK
        string globalRecordId
        string groupId "nullable"
        string myToThem "nullable"
        string themToUs "nullable"
        datetime updatedAt
    }

    User ||--}o PipelineStep : "stepsRun"
    UserRole ||--}o User : "user"
    UserRole ||--}o Role : "role"
    UserPermission ||--}o User : "user"
    Project ||--}o Group : "group"
    UserGroup ||--}o User : "user"
    UserGroup ||--}o Group : "group"
    UserProject ||--}o User : "user"
    UserProject ||--}o Project : "project"
    UserBudget ||--o| User : "user"
    Signature ||--}o User : "author"
    SystemPrompt ||--}o User : "author"
    SystemPrompt |o--}o Group : "group"
    SystemPrompt |o--}o Project : "project"
    SystemPrompt |o--o| SystemPrompt : "derivedFrom"
    SystemPrompt ||--}o SystemPrompt : "derived"
    ContextPart ||--}o User : "author"
    ContextPart |o--}o Group : "group"
    ContextPart |o--}o Project : "project"
    ContextPart |o--o| ContextPart : "derivedFrom"
    ContextPart ||--}o ContextPart : "derived"
    SellingPoint ||--}o User : "author"
    SellingPoint |o--}o Group : "group"
    SellingPoint |o--}o Project : "project"
    SellingPoint |o--o| SellingPoint : "derivedFrom"
    SellingPoint ||--}o SellingPoint : "derived"
    EmailDraft ||--}o User : "author"
    EmailDraft |o--}o Group : "group"
    EmailDraft |o--}o Project : "project"
    EmailDraft |o--o| EmailDraft : "derivedFrom"
    EmailDraft ||--}o EmailDraft : "derived"
    PipelineRun ||--}o User : "author"
    PipelineRun ||--}o Project : "project"
    PipelineStep ||--}o PipelineRun : "pipelineRun"
    PipelineStep |o--}o SystemPrompt : "systemPrompt"
    PipelineStep |o--}o SellingPoint : "sellingPoint"
    PipelineStep |o--}o EmailDraft : "emailDraft"
    PipelineStep ||--}o User : "runner"
    CandidatePartner ||--}o Partner : "partner"
    CandidatePartner ||--}o PipelineStep : "step"
    GlobalRecord ||--}o User : "creator"
    GlobalRecord |o--o| GlobalRecord : "duplicateOf"
    GlobalRecord ||--}o GlobalRecord : "duplicates"
    UsageEvent ||--}o User : "user"
    UsageEvent |o--}o PipelineStep : "step"
    InputSource ||--}o PipelineRun : "pipelineRun"
    InputSource |o--}o PipelineStep : "step"
    InputSource ||--}o User : "creator"
    PipelineRecordRef ||--}o PipelineRun : "pipelineRun"
    PipelineRecordRef ||--}o PipelineStep : "step"
    PipelineRecordRef ||--}o GlobalRecord : "globalRecord"
    PipelineRecordRef |o--}o InputSource : "inputSource"
    PipelineRecordRef ||--}o User : "adder"
    RecordEvent ||--}o GlobalRecord : "globalRecord"
    RecordEvent ||--}o User : "user"
    PartnerContact ||--}o GlobalRecord : "globalRecord"
    PartnerAssignment ||--}o GlobalRecord : "globalRecord"
    PartnerAssignment ||--}o User : "user"
    PartnerMailEvent ||--}o GlobalRecord : "globalRecord"
    PartnerMailEvent ||--}o User : "creator"
    PartnerNote ||--}o GlobalRecord : "globalRecord"
    PartnerNote ||--}o User : "author"
    PartnerNote |o--}o Group : "group"
    PartnerFulfillment ||--}o GlobalRecord : "globalRecord"
    PartnerFulfillment |o--}o Group : "group"